audios and success

--- a/index.html
+++ b/index.html
@@ -94,8 +94,14 @@
       </div>
     </div>
   </div>
-  <audio id="success" src="audio/success.mp4" preload="auto"></audio>
-  <audio id="fail" src="audio/fail.mp4" preload="auto"></audio>
+  <div class="success-panel">
+    <iframe src="https://giphy.com/embed/zaqclXyLz3Uoo" width="480" height="389" frameBorder="0" class="giphy-embed"
+      allowFullScreen></iframe>
+    <p><a href="https://giphy.com/gifs/zaqclXyLz3Uoo">via GIPHY</a></p>
+  </div>
+  <audio id="success" src="audio/success.mp3" preload="auto"></audio>
+  <audio id="fail" src="audio/fail.mp3" preload="auto"></audio>
+  <audio id="FinalSuccess" src="audio/FinalSuccess.mp3" preload="auto"></audio>
   <script src="./js/FileSaver.js"></script>
   <script src="./js/main.js"></script>
 </body>
