--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
   <audio id="success" src="audio/success.mp3" preload="auto"></audio>
   <audio id="fail" src="audio/fail.mp3" preload="auto"></audio>
   <audio id="FinalSuccess" src="audio/FinalSuccess.mp3" preload="auto"></audio>
+  <canvas id="my-canvas"></canvas>
+  <script src="/js/index.min.js"></script>
   <script src="./js/FileSaver.js"></script>
   <script src="./js/main.js"></script>
 </body>
